Chapter 2 - several small changes

--- a/exercises/02_06_exset_04.tex
+++ b/exercises/02_06_exset_04.tex
@@ -1,5 +1,5 @@
 {\noindent In Exercises}
-{, an implicitly defined function is given. Find $\ds \frac{d^2y}{dx^2}$. Note: these are the same problems used in Exercises \ref{exer:02_06_ex_09} through \ref{exer:02_06_ex_12}.
+{, an implicitly defined relation is given. Find $\ds \frac{d^2y}{dx^2}$. Note: these are the same problems used in Exercises \ref{exer:02_06_ex_09} through \ref{exer:02_06_ex_12}.
 }
 \exinput{exercises/02_06_ex_28}
 \exinput{exercises/02_06_ex_29}
