--- a/text/02_Derivative_Rules.tex
+++ b/text/02_Derivative_Rules.tex
@@ -16,31 +16,25 @@ So if $y = 6x^2+11x-13$, we can immediately compute $y\primeskip' = 12x+11$. \\
 
 In this section (and in some sections to follow) we will learn some of what mathematicians have already discovered about the derivatives of certain functions and how derivatives interact with arithmetic operations. We start with a theorem.
 
-\setboxwidth{110pt}
-\noindent\hskip-110pt
-\begin{minipage}{\specialboxlength}
+%\setboxwidth{110pt}
+%\noindent\hskip-110pt
+%\begin{minipage}{\specialboxlength}
 \theorem{thm:deriv_common}{Derivatives of Common Functions}{
-		\noindent\begin{minipage}[t]{175pt}
 		\begin{enumerate}
 		\item		\sword{Constant Rule:}\index{derivative!Constant Rule} 
 		
-		$\ds \frac{d}{dx}\big( c\big) = 0$, where $c$ is a constant.\addtocounter{enumi}{1}
-		\item		$\ds \frac{d}{dx}(\sin x) = \cos x$\addtocounter{enumi}{1}
-		\item		$\ds \frac{d}{dx}\left(e^x\right) = e^x$
-		\end{enumerate}
-		\end{minipage}
-		\begin{minipage}[t]{210pt}
-		\begin{enumerate}\addtocounter{enumi}{1}
-		\item		\sword{Power Rule:}\index{derivative!Power Rule}\index{Power Rule!differentiation}
+		$\ds \frac{d}{dx}\big( c\big) = 0$, where $c$ is a constant.%\addtocounter{enumi}{1}
+\item		\sword{Power Rule:}\index{derivative!Power Rule}\index{Power Rule!differentiation}
 		
-		$\ds \frac{d}{dx}\left(x^n\right) = nx^{n-1}$, where $n$ is an integer, $n>0$.\addtocounter{enumi}{1}
-		\item		$\ds \frac{d}{dx}(\cos x) = -\sin x$\addtocounter{enumi}{1}
+		$\ds \frac{d}{dx}\left(x^n\right) = nx^{n-1}$, where $n$ is an integer, $n>0$%.\addtocounter{enumi}{1}
+		\item		$\ds \frac{d}{dx}(\sin x) = \cos x$%\addtocounter{enumi}{1}
+		\item		$\ds \frac{d}{dx}(\cos x) = -\sin x$%\addtocounter{enumi}{1}
+		\item		$\ds \frac{d}{dx}\left(e^x\right) = e^x$
 		\item		$\ds \frac{d}{dx}(\ln x) = \frac{1}{x}$
 		\end{enumerate}\index{derivative!basic rules}
-		\end{minipage}
 }
-\end{minipage}
-\restoreboxwidth
+%\end{minipage}
+%\restoreboxwidth
 
 This theorem starts by stating an intuitive fact: constant functions have no rate of change as they are \textit{constant}. Therefore their derivative is 0 (they change at the rate of 0). The theorem then states some fairly amazing things. The Power Rule states that the derivatives of Power Functions (of the form $y=x^n$) are very straightforward: multiply by the power, then subtract 1 from the power. We see something incredible about the function $y=e^x$: it is its own derivative. We also see a new connection between the sine and cosine functions. 
 
@@ -79,7 +73,7 @@ Let's practice using this theorem.\\
 		\end{enumerate}
 \vskip-1.5\baselineskip
 }\\
-\clearpage
+%\clearpage
 
 Theorem \ref{thm:deriv_common} gives useful information, but we will need much more. For instance, using the theorem, we can easily find the derivative of $y=x^3$, but it does not tell how to compute the derivative of $y=2x^3$, $y=x^3+\sin x$ nor $y=x^3\sin x$. The following theorem helps with the first two of these examples (the third is answered in the next section).
 \enlargethispage{\baselineskip}
