--- a/exercises/02_01_exset_02.tex
+++ b/exercises/02_01_exset_02.tex
@@ -8,4 +8,5 @@
 \exinput{exercises/02_01_ex_14}
 \exinput{exercises/02_01_ex_14z}
 \exinput{exercises/02_01_ex_15}
+\exinput{exercises/02_01_ex_15z}
 \exinput{exercises/02_01_ex_16}
