--- a/exercises/02_01_exset_03.tex
+++ b/exercises/02_01_exset_03.tex
@@ -12,4 +12,5 @@
 \exinput{exercises/02_01_ex_21}
 \exinput{exercises/02_01_ex_21z}
 \exinput{exercises/02_01_ex_22}
+\exinput{exercises/02_01_ex_22z}
 \exinput{exercises/02_01_ex_23}
