--- a/exercises/02_04_exercises.tex
+++ b/exercises/02_04_exercises.tex
@@ -4,7 +4,7 @@
 \exinput{exercises/02_04_ex_03}
 \exinput{exercises/02_04_ex_04}
 \exinput{exercises/02_04_ex_05}
-\exinput{exercises/02_04_ex_06}
+%\exinput{exercises/02_04_ex_06}
 %\exinput{exercises/02_03_ex_07}
 %\exinput{exercises/02_03_ex_08}
 %\exinput{exercises/02_03_ex_09}
