--- a/exercises/02_06_ex_01.tex
+++ b/exercises/02_06_ex_01.tex
@@ -1,3 +1,3 @@
-{In your own words, explain the difference between implicit functions and explicit functions.
+{In your own words, explain the difference between implicit relations and explicit relations.
 }
 {Answers will vary.}
