--- a/text/02_Implicit_Differentiation.tex
+++ b/text/02_Implicit_Differentiation.tex
@@ -1,106 +1,110 @@
 \section{Implicit Differentiation}\label{sec:imp_deriv}
 
-In the previous sections we learned to find the derivative, $ \frac{dy}{dx}$, or $y\primeskip'$, when $y$ is given \textit{explicitly} as a function of $x$. That is, if we know $y=f(x)$ for some function $f$, we can find $y\primeskip'$. For example, given  $y=3x^2-7$, we can easily find $y\primeskip'=6x$. (Here we explicitly state how $x$ and $y$ are related. Knowing $x$, we can directly find $y$.)
+In the previous sections we learned to find the derivative, $ \frac{dy}{dx}$, or $y\primeskip'$, when $y$ is given \textit{explicitly} as a function of $x$. That is, if we know $y=f(x)$ for some function $f$, we can find $\frac{dy}{dx}$. For example, given  $y=3x^2-7$, we can easily find $\frac{dy}{dx}=6x$. (Here we explicitly state how $x$ and $y$ are related. Knowing $x$, we can directly find $y$.)
 
-Sometimes the relationship between $y$ and $x$ is not explicit; rather, it is \textit{implicit}. For instance, we might know that $x^2-y=4$. This equality defines a relationship between $x$ and $y$; if we know $x$, we could figure out $y$. Can we still find $y\primeskip'$?  In this case, sure; we  solve for $y$ to get $y=x^2-4$ (hence we now know $y$ explicitly)  and then differentiate to get $y\primeskip'=2x$.
+Sometimes the relationship between $y$ and $x$ is not explicit; rather, it is \textit{implicit}. For instance, we might know that $x^2-y=4$. This equality defines a relationship between $x$ and $y$; if we know $x$, we could figure out $y$. Can we still find $\frac{dy}{dx}$?  In this case, sure; we solve for $y$ to get $y=x^2-4$ (hence we now know $y$ explicitly)  and then differentiate to get $\frac{dy}{dx}=2x$.
 
-Sometimes the \textit{implicit} relationship between $x$ and $y$ is complicated.  Suppose we are given $\sin(y)+y^3=6-x^3$. A graph of this implicit function is given in Figure \ref{fig:implicit1}. In this case there is absolutely no way to solve for $y$ in terms of elementary functions.  The surprising thing is, however, that we can still find $y\primeskip'$ via a process known as \sword{implicit differentiation}.\index{implicit differentiation}\index{derivative!implicit}
+Sometimes the \textit{implicit} relationship between $x$ and $y$ is complicated.  Suppose we are given $\sin(y)+y^3=6-x^3$. A graph of this implicit relation is given in Figure \ref{fig:implicit1}. In this case there is absolutely no way to solve for $y$ in terms of elementary functions.  The surprising thing is, however, that we can still find $\frac{dy}{dx}$ via a process known as \sword{implicit differentiation}.\index{implicit differentiation}\index{derivative!implicit}
 
-\mfigure{.7}{A graph of the implicit function $\sin (y)+y^3=6-x^3$.}{fig:implicit1}{figures/figimplicit1}
+\mfigure{.7}{A graph of the implicit equation $\sin(y)+y^3=6-x^3$.}{fig:implicit1}{figures/figimplicit1}
 
 Implicit differentiation is a technique based on the Chain Rule that is used to find a derivative when the relationship between the variables is given implicitly rather than explicitly (solved for one variable in terms of the other). \\
 
-We begin by reviewing the Chain Rule. Let $f$ and $g$ be functions of $x$. Then $$\frac{d}{dx}\Big(f(g(x))\Big) = \fp(g(x))\cdot g'(x).$$ Suppose now that $y=g(x)$. We can rewrite the above as \begin{equation}\frac{d}{dx}\Big(f(y))\Big) = \fp(y))\cdot y\primeskip', \quad \text{or}\quad \frac{d}{dx}\Big(f(y))\Big)= \fp(y)\cdot \frac{dy}{dx} .\label{eq:implicit1}\end{equation} These equations look strange; the key concept to learn here is that we can find $y\primeskip'$ even if we don't exactly know how $y$ and $x$ relate.\\
+We begin by reviewing the Chain Rule. Let $f$ and $g$ be functions of $x$. Then $$\frac{d}{dx}\Big(f(g(x))\Big) = \fp(g(x))\cdot g'(x).$$ Suppose now that $y=g(x)$. We can rewrite the above as \begin{equation}\frac{d}{dx}\Big(f(y))\Big)= \fp(y)\cdot \frac{dy}{dx} .\label{eq:implicit1}\end{equation} These equations look strange; the key concept to learn here is that we can find $\frac{dy}{dx}$ even if we don't exactly know how $y$ and $x$ relate.\\
 
 We demonstrate this process in the following example.\\
 
 \example{ex_implicit1}{Using Implicit Differentiation}{
-Find $y\primeskip'$ given that $\sin(y) + y^3=6-x^3$.}
+Find $\frac{dy}{dx}$ given that $\sin(y) + y^3=6-x^3$.}
 {We start by taking the derivative of both sides (thus maintaining the equality.) We have :
 $$ \frac{d}{dx}\Big(\sin(y) + y^3\Big)=\frac{d}{dx}\Big(6-x^3\Big).$$
 The right hand side is easy; it returns $-3x^2$. 
 
-The left hand side requires more consideration. We take the derivative term--by--term.  Using the technique derived from Equation \ref{eq:implicit1} above, we can see that $$\frac{d}{dx}\Big(\sin y\Big) = \cos y \cdot y\primeskip'.$$ %The derivative of $\sin(y)$ is $\cos(y)y\primeskip'$.  The reason for this is the chain rule. Since $y$ itself depends on $x$, the term $\sin(y)$ is really a function inside of a function, $y$ being a function of $x$.
+The left hand side requires more consideration. We take the derivative term--by--term.  Using the technique derived from Equation \ref{eq:implicit1} above, we can see that $$\frac{d}{dx}\Big(\sin y\Big) = \cos y \cdot \frac{dy}{dx}.$$ %The derivative of $\sin(y)$ is $\cos(y)y\primeskip'$.  The reason for this is the chain rule. Since $y$ itself depends on $x$, the term $\sin(y)$ is really a function inside of a function, $y$ being a function of $x$.
 
 We apply the same process to the $y^3$ term. 
-$$\frac{d}{dx}\Big(y^3\Big) = \frac{d}{dx}\Big((y)^3\Big) = 3(y)^2\cdot y\primeskip'.$$
+$$\frac{d}{dx}\Big(y^3\Big) = \frac{d}{dx}\Big((y)^3\Big) = 3(y)^2\cdot \frac{dy}{dx}.$$
 %Similarly, the derivative of $y^3$ is $3y^2y\primeskip'$.  
 Putting this together with the right hand side, we have
-$$\cos(y)y\primeskip'+3y^2y\primeskip' = -3x^2.$$
-Now solve for $y\primeskip'$.
+$$\cos(y)y\frac{dy}{dx}+3y^2\frac{dy}{dx} = -3x^2.$$
+Now solve for $y\frac{dy}{dx}$.
 		\begin{align*}
-		\cos(y)y\primeskip'+3y^2y\primeskip' 	&= -3x^2.\\
-		\big(\cos y+3y^2\big)y\primeskip' &=	-3x^2\\
-		y\primeskip'&=	\frac{-3x^2}{\cos y+3y^2}
+		\cos(y)y\frac{dy}{dx}+3y^2\frac{dy}{dx} 	&= -3x^2.\\
+		\big(\cos y+3y^2\big)\frac{dy}{dx}&=	-3x^2\\
+		\frac{dy}{dx}&=	\frac{-3x^2}{\cos y+3y^2}
 		\end{align*}
 
-This equation for $y\primeskip'$ probably seems unusual for it contains both $x$ and $y$ terms. How is it to be used? We'll address that next.}\\
+The reason that the $x$ terms and $y$ terms are treated differently is that, for example, a derivative $\frac{d}{dx}\left(y^3\right)$ represents a rate of change; how fast is $y^3$ changing per unit $x$.  The operator $\frac{d}{dx}$ means to take the derivative \textit{with respect to} $x$.  If we were taking the derivative $\frac{d}{dy}\left(y^3\right)$ with respect to $y$, the answer would be $3y^2$.  However, instead $\frac{d}{dx}\left(y^3\right)=3y^2\frac{dy}{dx}$ because the variable in $y^3$ and the variable $x$ we are the derivative do not match, so the Chain Rule is needed.\\
 
-Implicit functions are generally harder to deal with than explicit functions. With an explicit function, given an $x$ value, we have an explicit formula for computing the corresponding $y$ value. With an implicit function, one often has to find $x$ and $y$ values \textit{at the same time} that satisfy the equation. It is much easier to demonstrate that a given point satisfies the equation than to actually find such a point.
+The equation for $\frac{dy}{dx}$ above probably seems unusual for it contains both $x$ and $y$ terms. How is it to be used? We'll address that next.}\\
 
-For instance, we can affirm easily that the point $(\sqrt[3]{6},0)$ lies on the graph of the implicit function $\sin y + y^3=6-x^3$. Plugging in $0$ for $y$, we see the left hand side is $0$. Setting $x=\sqrt[3]6$, we see the right hand side is also $0$; the equation is satisfied. The following example finds the equation of the tangent line to this function at this point.\\
+Implicit equations are generally harder to deal with than explicit functions. With an explicit function, given an $x$ value, we have an explicit formula for computing the corresponding $y$ value. With an implicit equation, one often has to find $x$ and $y$ values \textit{at the same time} that satisfy the equation. It is much easier to demonstrate that a given point satisfies the equation than to actually find such a point.
+
+For instance, we can affirm easily that the point $(\sqrt[3]{6},0)$ lies on the graph of the implicit equation $\sin y + y^3=6-x^3$. Plugging in $0$ for $y$, we see the left hand side is $0$. Setting $x=\sqrt[3]6$, we see the right hand side is also $0$; the equation is satisfied. The following example finds the equation of the tangent line to this equation at this point.\\
 
 \example{ex_implicit2}{Using Implicit Differentiation to find a tangent line}{
-Find the equation of the line tangent to the curve of the implicitly defined function $\sin y + y^3=6-x^3$ at the point $(\sqrt[3]6,0)$.}
-{In Example \ref{ex_implicit1} we found that $$y\primeskip' = \frac{-3x^2}{\cos y +3y^2}.$$ We find the slope of the tangent line at the point  $(\sqrt[3]6,0)$ by substituting $\sqrt[3]6$ for $x$ and $0$ for $y$. Thus at the point $(\sqrt[3]6,0)$, we have the slope as $$y\primeskip' = \frac{-3(\sqrt[3]{6})^2}{\cos 0 + 3\cdot0^2} = \frac{-3\sqrt[3]{36}}{1} \approx -9.91.$$
+Find the equation of the line tangent to the curve of the implicitly defined relation $\sin y + y^3=6-x^3$ at the point $(\sqrt[3]6,0)$.}
+{In Example \ref{ex_implicit1} we found that $$\frac{dy}{dx} = \frac{-3x^2}{\cos y +3y^2}.$$ We find the slope of the tangent line at the point  $(\sqrt[3]6,0)$ by substituting $\sqrt[3]6$ for $x$ and $0$ for $y$. Thus at the point $(\sqrt[3]6,0)$, we have the slope as $$\left.\frac{dy}{dx}\right|_{(\sqrt[3]6,0)} = \frac{-3(\sqrt[3]{6})^2}{\cos 0 + 3\cdot0^2} = \frac{-3\sqrt[3]{36}}{1} \approx -9.91.$$
 
-Therefore the equation of the tangent line to the implicitly defined function $\sin y + y^3=6-x^3$ at the point $(\sqrt[3]{6},0)$ is $$y = -3\sqrt[3]{36}(x-\sqrt[3]{6})+0 \approx -9.91x+18.$$ The curve and this tangent line are shown in Figure \ref{fig:implicit2}.
-\mfigure{.8}{The function $\sin y+y^3 = 6-x^3$ and its tangent line at the point $(\sqrt[3]{6},0)$.}{fig:implicit2}{figures/figimplicit2}
+Therefore the equation of the tangent line to the implicitly defined relation $\sin y + y^3=6-x^3$ at the point $(\sqrt[3]{6},0)$ is $$y = -3\sqrt[3]{36}(x-\sqrt[3]{6})+0 \approx -9.91x+18.$$ The curve and this tangent line are shown in Figure \ref{fig:implicit2}.
+\mfigure{.8}{The equation $\sin y+y^3 = 6-x^3$ and its tangent line at the point $(\sqrt[3]{6},0)$.}{fig:implicit2}{figures/figimplicit2}
 }\\
 
 
-This suggests a general method for implicit differentiation.  For the steps below assume $y$ is a function of $x$.
+This suggests a general method for implicit differentiation.  %For the steps below assume $y$ is a function of $x$.
 \begin{enumerate}
-\item Take the derivative of each term in the equation.  Treat the $x$ terms like normal.  When taking the derivatives of $y$ terms, the usual rules apply except that, because of the Chain Rule, we need to multiply each term by $y\primeskip'$.
-\item Get all the $y\primeskip'$ terms on one side of the equal sign and put the remaining terms on the other side.
-\item Factor out $y\primeskip'$;  solve for $y\primeskip'$ by dividing.
+\item Take the derivative of each term in the equation (with respect to $x$).  Treat the $x$ terms like normal.  When taking the derivatives of $y$ terms, the usual rules apply except that, because of the Chain Rule, we need to multiply each term by $\frac{dy}{dx}$.
+\item Get all the $\frac{dy}{dx}$ terms on one side of the equal sign and put the remaining terms on the other side.
+\item Factor out $\frac{dy}{dx}$;  solve for $\frac{dy}{dx}$ by dividing.
 \end{enumerate}
 
-\noindent\textbf{Practical Note:} When working by hand, it may be beneficial to use the symbol $\frac{dy}{dx}$ instead of $y\primeskip'$, as the latter can be easily confused for $y$ or $y^1$.\\
+Again, the reason why we need the $\frac{dy}{dx}$ for $y$ terms but not $x$ terms is because we are taking derivatives with respect to $x$.  Later, in Section~\ref{sec:related_rates} about Related Rates, we determine rates of change with respect to a variable not in the equation (such as time) by a similar process.\\
+
+%\noindent\textbf{Practical Note:} When working by hand, it may be beneficial to use the symbol $\frac{dy}{dx}$ instead of $y\primeskip'$, as the latter can be easily confused for $y$ or $y^1$.\\
 
 \example{ex_implicit3}{Using Implicit Differentiation}{
-Given the implicitly defined function $y^3+x^2y^4=1+2x$, find $y\primeskip'$.}
+Given the implicitly defined equation $y^3+x^2y^4=1+2x$, find $\frac{dy}{dx}$.}
 {We will take the implicit derivatives term by term. The derivative of $y^3$ is $3y^2y\primeskip'$.  
 
-The second term, $x^2y^4$, is a little tricky.  It requires the Product Rule as it is the product of two functions of $x$: $x^2$ and $y^4$.  Its derivative is $x^2(4y^3y\primeskip') + 2xy^4$.  The first part of this expression requires a $y\primeskip'$ because we are taking the derivative of a $y$ term.  The second part does not require it because we are taking the derivative of $x^2$.  
+The second term, $x^2y^4$, is a little tricky.  It requires the Product Rule as it is the product of two expressions: $x^2$ and $y^4$.  Its derivative is $\ds 2xy^4 + x^2\left(4y^3y\frac{dy}{dx}\right)$.  The second part of this expression requires a $\frac{dy}{dx}$ because we are taking the derivative of a $y$ term.  The second part does not require it because we are taking the derivative of $x^2$.  
 
 The derivative of the right hand side is easily found to be $2$. In all, we get:
-$$3y^2y\primeskip' + 4x^2y^3y\primeskip' + 2xy^4 = 2.$$
+$$3y^2\frac{dy}{dx} + 4x^2y^3\frac{dy}{dx} + 2xy^4 = 2.$$
 
-Move terms around so that the left side consists only of the $y\primeskip'$ terms and the right side consists of all the other terms:
-$$3y^2y\primeskip' + 4x^2y^3y\primeskip' = 2-2xy^4.$$
-Factor out $y\primeskip'$ from the left side and solve to get
-$$y\primeskip' = \frac{2-2xy^4}{3y^2+4x^2y^3}.$$
+Move terms around so that the left side consists only of the $\frac{dy}{dx}$ terms and the right side consists of all the other terms:
+$$3y^2\frac{dy}{dx} + 4x^2y^3\frac{dy}{dx} = 2-2xy^4.$$
+Factor out $\frac{dy}{dx}$ from the left side and solve to get
+$$\frac{dy}{dx} = \frac{2-2xy^4}{3y^2+4x^2y^3}.$$
 
-To confirm the validity of our work, let's find the equation of a tangent line to this function at a point. It is easy to confirm that the point $(0,1)$ lies on the graph of this function. At this point, $y\primeskip' = 2/3$. So the equation of the tangent line is $y = 2/3(x-0)+1$. The function and its tangent line are graphed in Figure \ref{fig:implicit4}.
+To confirm the validity of our work, let's find the equation of a tangent line to this relation at a point. It is easy to confirm that the point $(0,1)$ lies on the graph of this relation. At this point, $\left.\frac{dy}{dx}\right|_{(0,1)} = 2/3$. So the equation of the tangent line is $y = 2/3(x-0)+1$. The relation and its tangent line are graphed in Figure \ref{fig:implicit4}.
 
-\mfigure{.8}{A graph of the implicitly defined function $y^3+x^2y^4=1+2x$ along with its tangent line at the point $(0,1)$.}{fig:implicit4}{figures/figimplicit4}
+\mfigure{.8}{A graph of the implicitly defined equation $y^3+x^2y^4=1+2x$ along with its tangent line at the point $(0,1)$.}{fig:implicit4}{figures/figimplicit4}
 
-Notice how our function looks much different than other functions we have seen. For one, it fails the vertical line test. Such functions are important in many areas of mathematics, so developing tools to deal with them is also important.
+%Notice how our function looks much different than other functions we have seen. For one, it fails the vertical line test. Such functions are important in many areas of mathematics, so developing tools to deal with them is also important.
 }\\
 
 \example{ex_implicit5}{Using Implicit Differentiation}{
-Given the implicitly defined function $\sin(x^2y^2)+y^3=x+y$, find $y\primeskip'$.}
+Given the implicitly defined equation $\sin(x^2y^2)+y^3=x+y$, find $\frac{dy}{dx}$.}
 {Differentiating term by term, we find the most difficulty in the first term.  It requires both the Chain and Product Rules.
 		\begin{align*}
 		\frac{d}{dx}\Big(\sin(x^2y^2)\Big) &= \cos(x^2y^2)\cdot\frac{d}{dx}\Big(x^2y^2\Big) \\
-																				&= \cos(x^2y^2)\cdot\big(x^2(2yy\primeskip')+2xy^2\big)\\
-																				&= 2(x^2yy\primeskip'+xy^2)\cos(x^2y^2).
+																				&= \cos(x^2y^2)\cdot\left(2xy^2+x^2\left(2y\frac{dy}{dx}\right)\right)\\
+																				&= 2\left(xy^2+x^2y\frac{dy}{dx}\right)\cos(x^2y^2).
 		\end{align*}  
 
 We leave the derivatives of the other terms to the reader. After taking the derivatives of both sides, we have
-$$2(x^2yy\primeskip'+xy^2)\cos(x^2y^2) + 3y^2y\primeskip' = 1 + y\primeskip'.$$
+$$2\left(xy^2+x^2y\frac{dy}{dx}\right)\cos(x^2y^2) + 3y^2\frac{dy}{dx} = 1 + \frac{dy}{dx}.$$
 
 We now have to be careful to properly solve for $y\primeskip'$, particularly because of the product on the left.  It is best to multiply out the product.  Doing this, we get
-$$2x^2y\cos(x^2y^2)y\primeskip' + 2xy^2\cos(x^2y^2) + 3y^2y\primeskip' = 1 + y\primeskip'.$$
+$$2xy^2\cos(x^2y^2)+2x^2y\cos(x^2y^2)\frac{dy}{dx}  + 3y^2\frac{dy}{dx} = 1 + \frac{dy}{dx}.$$
 From here we can safely move around terms to get the following:
-$$2x^2y\cos(x^2y^2)y\primeskip' + 3y^2y\primeskip' - y\primeskip' = 1 - 2xy^2\cos(x^2y^2).$$
-Then we can solve for $y\primeskip'$ to get
-$$y\primeskip' = \frac{1 - 2xy^2\cos(x^2y^2)}{2x^2y\cos(x^2y^2)+3y^2-1}.$$
+$$2x^2y\cos(x^2y^2)\frac{dy}{dx} + 3y^2\frac{dy}{dx} - \frac{dy}{dx} = 1 - 2xy^2\cos(x^2y^2).$$
+Then we can solve for $\frac{dy}{dx}$ to get
+$$\frac{dy}{dx} = \frac{1 - 2xy^2\cos(x^2y^2)}{2x^2y\cos(x^2y^2)+3y^2-1}.$$
 
-A graph of this implicit function is given in Figure \ref{fig:implicit5}. It is easy to verify that the points $(0,0)$, $(0,1)$ and $(0,-1)$ all lie on the graph. We can find the slopes of the tangent lines at each of these points using our formula for $y\primeskip'$. 
+A graph of this implicit equation is given in Figure \ref{fig:implicit5}. It is easy to verify that the points $(0,0)$, $(0,1)$ and $(0,-1)$ all lie on the graph. We can find the slopes of the tangent lines at each of these points using our formula for $y\primeskip'$. 
 
-\mfigure{.5}{A graph of the implicitly defined function $\sin(x^2y^2)+y^3=x+y$.}{fig:implicit5}{figures/figimplicit5}
+\mfigure{.5}{A graph of the implicitly defined equation $\sin(x^2y^2)+y^3=x+y$.}{fig:implicit5}{figures/figimplicit5}
 
 At $(0,0)$, the slope is $-1$.
 
@@ -108,8 +112,8 @@ At $(0,1)$, the slope is $1/2$.
 
 At $(0,-1)$, the slope is also $1/2$.
 
-The tangent lines have been added to the graph of the function in Figure \ref{fig:implicit6}.
-\mfigure{.8}{A graph of the implicitly defined function $\sin(x^2y^2)+y^3=x+y$ and certain tangent lines.}{fig:implicit6}{figures/figimplicit6}
+The tangent lines have been added to the graph in Figure \ref{fig:implicit6}.
+\mfigure{.8}{A graph of the implicitly defined equation $\sin(x^2y^2)+y^3=x+y$ and certain tangent lines.}{fig:implicit6}{figures/figimplicit6}
 }\\
 
 
@@ -118,17 +122,17 @@ Quite a few ``famous'' curves have equations that are given implicitly.  We can 
 \example{ex_implicit7}{Finding slopes of tangent lines to a circle}{
 Find the slope of the tangent line to the circle $x^2+y^2=1$ at the point $(1/2, \sqrt{3}/2)$.}
 {%\myincludegraphics[scale=.4]{text/apex-implicit_differentiation1.png}
-Taking derivatives, we get $2x+2yy\primeskip'=0$.  Solving for $y\primeskip'$  gives: $$\ds y\primeskip' = \frac{-x}{y}.$$ 
+Taking derivatives, we get $2x+2y\frac{dy}{dx}=0$.  Solving for $\frac{dy}{dx}$  gives: $$\ds y\frac{dy}{dx} = \frac{-x}{y}.$$ 
 This is a clever formula. Recall that the slope of the line through the origin and the point $(x,y)$ on the circle will be $y/x$. We have found that the slope of the tangent line to the circle at that point is the opposite reciprocal of $y/x$, namely, $-x/y$. Hence these two lines are always perpendicular.
 
 At the point $(1/2, \sqrt{3}/2)$, we have the tangent line's slope as
-$$y\primeskip' = \frac{-1/2}{\sqrt{3}/2} = \frac{-1}{\sqrt{3}} \approx -0.577.$$
+$$\left.\frac{dy}{dx}\right|_{(1/2, \sqrt{3}/2)} = \frac{-1/2}{\sqrt{3}/2} = \frac{-1}{\sqrt{3}} \approx -0.577.$$
 
 A graph of the circle and its tangent line at $(1/2,\sqrt{3}/2)$ is given in Figure \ref{fig:implicit7}, along with a thin dashed line from the origin that is perpendicular to the tangent line. (It turns out that all normal lines to a circle pass through the center of the circle.)
 \mfigure{.5}{The unit circle with its tangent line at $(1/2,\sqrt{3}/2)$.}{fig:implicit7}{figures/figimplicit7}
 }\\
 
-This section has shown how to find the derivatives of implicitly defined functions, whose graphs include a wide variety of interesting and unusual shapes. Implicit differentiation can also be used to further our understanding of ``regular'' differentiation. 
+This section has shown how to find the derivatives of implicitly defined equations, whose graphs include a wide variety of interesting and unusual shapes. Implicit differentiation can also be used to further our understanding of ``regular'' differentiation. 
 
 One hole in our current understanding of derivatives is this: what is the derivative of the square root function? That is, $$\frac{d}{dx}\big(\sqrt{x}\big) = \frac{d}{dx}\big(x^{1/2}\big) = \text{?}$$
 
@@ -142,8 +146,8 @@ Let $y = x^{m/n}$, where $m$ and $n$ are integers with no common factors (so $m=
 y &= x^{m/n} \\
 y^n &= x^m \\
 \frac{d}{dx}\big(y^n\big) &= \frac{d}{dx}\big(x^m\big) \\
-n\cdot y^{n-1}\cdot y\primeskip' &= m\cdot x^{m-1} \\
-y\primeskip' 	&= \frac{m}{n} \frac{x^{m-1}}{y^{n-1}} \quad \mbox{\small (now substitute $x^{m/n}$ for $y$)} \\
+n\cdot y^{n-1}\cdot \frac{dy}{dx} &= m\cdot x^{m-1} \\
+\frac{dy}{dx} 	&= \frac{m}{n} \frac{x^{m-1}}{y^{n-1}} \quad \mbox{\small (now substitute $x^{m/n}$ for $y$)} \\
  		&= \frac{m}{n} \frac{x^{m-1}}{(x^{m/n})^{n-1}} \quad \mbox{\small (apply lots of algebra)}\\
 %		&= \frac{m}{n} \frac{x^{m-1}}{x^{m(n-1)/n}} \\
 %		&=	\frac{m}n	x^{(m-1)-m(n-1)/n} \\
@@ -152,7 +156,7 @@ y\primeskip' 	&= \frac{m}{n} \frac{x^{m-1}}{y^{n-1}} \quad \mbox{\small (now sub
 		&= \frac{m}n x^{m/n -1}.\rule{0pt}{18pt}
 \end{align*}
 
-The above derivation is the key to the proof extending the Power Rule to rational powers. Using limits, we can extend this once more to include \textit{all} powers, including irrational (even transcendental!) powers, giving the following theorem.
+The above derivation is the key to the proof extending the Power Rule to rational powers. Using limits, we can extend this once more to include \textit{all} powers, including irrational powers, giving the following theorem.
 
 \theorem{thm:finalpower}{Power Rule for Differentiation}
 {Let $f(x) = x^n$, where $n\neq 0$ is a real number. Then $f$ is a differentiable function, and $\fp(x) = n\cdot x^{n-1}$.\index{derivative!Power Rule}\index{Power Rule!differentiation}
@@ -172,10 +176,10 @@ Find the slope of $x^{2/3}+y^{2/3}=8$ at the point $(8,8)$.}
 
 To find the slope of the astroid at the point $(8,8)$, we take the derivative implicitly.
 \begin{align*}
-	\frac23x^{-1/3}+\frac23y^{-1/3}y\primeskip'&=0\\	
-								\frac23y^{-1/3}y\primeskip' &= -\frac23x^{-1/3}\\
-								y\primeskip'&=	-\frac{x^{-1/3}}{y^{-1/3}}\\
-								y\primeskip'&=	-\frac{y^{1/3}}{x^{1/3}} = -\sqrt[3]{\frac{y}x}.
+	\frac23x^{-1/3}+\frac23y^{-1/3}\frac{dy}{dx}&=0\\	
+								\frac23y^{-1/3}\frac{dy}{dx} &= -\frac23x^{-1/3}\\
+								\frac{dy}{dx}&=	-\frac{x^{-1/3}}{y^{-1/3}}\\
+								\frac{dy}{dx}&=	-\frac{y^{1/3}}{x^{1/3}} = -\sqrt[3]{\frac{y}x}.
 \end{align*}
 
 Plugging in $x=8$ and $y=8$, we get a slope of $-1$. The astroid, with its tangent line at $(8,8)$, is shown in Figure \ref{fig:implicit8}.
@@ -189,13 +193,13 @@ We can use implicit differentiation to find higher order derivatives. In theory,
 \enlargethispage{\baselineskip}
 
 \example{ex_implicit9}{Finding the second derivative}{
-Given $x^2+y^2=1$, find $\ds\frac{d^2y}{dx^2} = y\primeskip''$. }
-{We found that $y\primeskip' = \frac{dy}{dx} = -x/y$ in Example \ref{ex_implicit7}. To find $y\primeskip''$, we apply implicit differentiation to $y\primeskip'$.
+Given $x^2+y^2=1$, find $\ds\frac{d^2y}{dx^2} = \frac{d}{dx}\left(\frac{dy}{dx}\right)$. }
+{We found that $\frac{dy}{dx} = -x/y$ in Example \ref{ex_implicit7}. To find $\frac{d^2y}{dx^2}$, we apply implicit differentiation to $\frac{dy}{dx}$.
 \begin{align*}
-y\primeskip'' &= \frac{d}{dx}\big(y\primeskip'\big) \\
+\frac{d^2y}{dx^2}&= \frac{d}{dx}\left(\frac{dy}{dx}\right) \\
 		&= \frac{d}{dx}\left(-\frac xy\right)\qquad \text{\small (Now use the Quotient Rule.)} \\
-		&= -\frac{y(1) - x(y\primeskip')}{y^2} \\
-\intertext{replace $y\primeskip'$ with $-x/y$:}
+		&= -\frac{y(1) - x(\frac{dy}{dx})}{y^2} \\
+\intertext{replace $\frac{dy}{dx}$ with $-\frac{x}{y}$:}
 		&= -\frac{y-x(-x/y)}{y^2}\\
 		&= -\frac{y+x^2/y}{y^2}.
 \end{align*}
@@ -210,30 +214,32 @@ Consider the function $y=x^x$; it is graphed in Figure \ref{fig:logdiffa}. It is
 
 The function is not a power function: it has a ``power'' of $x$, not a constant. It is not an exponential function: it has a ``base'' of $x$, not a constant. 
 
-A differentiation technique known as \emph{logarithmic differentiation} becomes useful here. The basic principle is this: take the natural log of both sides of an equation $y=f(x)$, then use implicit differentiation to find $y\primeskip'$. We demonstrate this in the following example.\\
+A differentiation technique known as \emph{logarithmic differentiation} becomes useful here. The basic principle is this: take the natural logarithm of both sides of an equation $y=f(x)$, then use implicit differentiation to find $\frac{dy}{dx}$. We demonstrate this in the following example.\\
 
 \example{ex_implicit10}{Using Logarithmic Differentiation}{
-Given $y=x^x$, use logarithmic differentiation to find $y\primeskip'$.}
+Given $y=x^x$, use logarithmic differentiation to find $\frac{dy}{dx}$.}
 {As suggested above, we start by taking the natural log of both sides then applying implicit differentiation.
 \begin{align*}
 y &= x^x \\
 \ln (y) &= \parbox{50pt}{$\ln (x^x)$} \text{\small (apply logarithm rule)}\\
 \ln (y) &= \parbox{50pt}{$x\ln x$}  \text{\small (now use implicit differentiation)}\\
 \frac{d}{dx}\Big(\ln (y)\Big) &= \frac{d}{dx}\Big(x\ln x\Big) \\
-\frac{y\primeskip'}{y} &= \ln x + x\cdot\frac1x\\
-\frac{y\primeskip'}{y} &= \ln x + 1\\
-y\primeskip' &= \parbox{50pt}{$y\big(\ln x+1\big)$} \text{\small (substitute $y=x^x$)}\\
-y\primeskip' &= x^x\big(\ln x+1\big).
+\frac{y\frac{dy}{dx}}{y} &= \ln x + x\cdot\frac1x\\
+\frac{y\frac{dy}{dx}}{y} &= \ln x + 1\\
+y\frac{dy}{dx} &= \parbox{50pt}{$y\big(\ln x+1\big)$} \text{\small (substitute $y=x^x$)}\\
+y\frac{dy}{dx} &= x^x\big(\ln x+1\big).
 \end{align*} 
 
-To ``test'' our answer, let's use it to find the equation of the tangent line at $x=1.5$. The point on the graph our tangent line must pass through is $(1.5, 1.5^{1.5}) \approx (1.5, 1.837)$. Using the equation for $y\primeskip'$, we find the slope as
-$$y\primeskip' = 1.5^{1.5}\big(\ln 1.5+1\big) \approx 1.837(1.405) \approx 2.582.$$
+Throughout this section, we have left answers in terms of both $x$ and $y$, which makes sense because we did not have a formula for $y$ in terms of $x$.  However, in this example, we do know that $y=x^x$, so we simplified our final answer to be just in terms of $x$.  We actually found a derivative of an explicit function using implicit differentiation.
+
+To ``test'' our answer, let's use it to find the equation of the tangent line at $x=1.5$. The point on the graph our tangent line must pass through is $(1.5, 1.5^{1.5}) \approx (1.5, 1.837)$. Using the equation for $\frac{dy}{dx}$, we find the slope as
+$$\left.\frac{dy}{dx}\right|_{x=1} = 1.5^{1.5}\big(\ln 1.5+1\big) \approx 1.837(1.405) \approx 2.582.$$
 Thus the equation of the tangent line is $y = 1.6833(x-1.5)+1.837$. Figure \ref{fig:implicit9} graphs $y=x^x$ along with this tangent line.
 \mfigure{.8}{A graph of $y=x^x$ and its tangent line at $x=1.5$.}{fig:implicit10}{figures/figimplicit10}
 }\\
 
 
-Implicit differentiation proves to be useful as it allows us to find the instantaneous rates of change of a variety of functions. In particular, it extended the Power Rule to rational exponents, which we then extended to all real numbers. In the next section, implicit differentiation will be used to find the derivatives of \textit{inverse} functions, such as $y=\sin^{-1} x$.
+Implicit differentiation proves to be useful as it allows us to find the instantaneous rates of change of a variety of equations. In particular, it extended the Power Rule to rational exponents, which we then extended to all real numbers. In the next section, implicit differentiation will be used to find the derivatives of \textit{inverse} functions, such as $y=\sin^{-1} x$.
 
 \printexercises{exercises/02_06_exercises}
 %
