Fixed so that Calc 2 and 3 pdfs continue numbering from Calc 1 to meet up with entire book

--- a/CalculusI.tex
+++ b/CalculusI.tex
@@ -283,14 +283,14 @@
 %%\addtocounter{keyideacounter}{-1}
 %\addtocounter{examplecounter}{-1}
 %%
-%%\refstepcounter{definitioncounter}
-%%\label{lastdefcount1}
-%%\refstepcounter{theoremcounter}
-%%\label{lastthmcount1}
-%%\refstepcounter{keyideacounter}
-%%\label{lastideacount1}
-%%\refstepcounter{examplecounter}
-%%\label{lastexamplecount1}
+\refstepcounter{definitioncounter}
+\label{lastdefcount1}
+\refstepcounter{theoremcounter}
+\label{lastthmcount1}
+\refstepcounter{keyideacounter}
+\label{lastideacount1}
+\refstepcounter{examplecounter}
+\label{lastexamplecount1}
 
 %%\addtocounter{chapter}{12}
 %\clearpage{\pagestyle{empty}\cleardoublepage}
