Fixed solutions on 2 problems in 2.5

--- a/exercises/02_05_ex_42.tex
+++ b/exercises/02_05_ex_42.tex
@@ -1,4 +1,4 @@
 {$\ds h(t) = \frac{2^t+3}{3^t+2}$
 }
-{$\fp(x) = \frac{(3^t+2)\big((\ln 2) 2^t\big)-(2^t+3)\big((\ln 3)3^t\big)}{(3^t+2)^2}$
+{$h\primeskip'(t) = \frac{\left(3^t+2\right)\big((\ln 2) 2^t\big)-\left(2^t+3\right)\big((\ln 3)3^t\big)}{\left(3^t+2\right)^2}$
 }
