--- a/exercises/03_01_ex_22.tex
+++ b/exercises/03_01_ex_22.tex
@@ -2,5 +2,5 @@
 }
 {min: $(0,0)$ and $(\pi,0)$
 
-max: $(3\pi/4,\frac{\sqrt{2}e^{3\pi/4}}{2})$
+max: $\ds \left(\frac{3\pi}{4},\frac{\sqrt{2}e^{3\pi/4}}{2}\right)$
 }
