--- a/exercises/03_01_exset_03.tex
+++ b/exercises/03_01_exset_03.tex
@@ -10,3 +10,4 @@
 \exinput{exercises/03_01_ex_22}
 \exinput{exercises/03_01_ex_23}
 \exinput{exercises/03_01_ex_24}
+\exinput{exercises/03_01_ex_25}
