--- a/text/03_Extreme_Values.tex
+++ b/text/03_Extreme_Values.tex
@@ -124,7 +124,7 @@ Be careful to understand that this theorem states  ``All relative extrema occur 
 
 \mfigure{.8}{A graph of $f(x)=x^3$ which has a critical value of $x=0$, but no relative extrema.}{fig:extreme4}{figures/figextreme4}
 
-Theorem \ref{thm:extreme_val} states that a continuous function on a closed interval will have absolute extrema, that is, both an absolute maximum and an absolute minimum. These extrema occur either at the endpoints or at critical values in the interval. We combine these concepts to offer a strategy for finding extrema.
+The Extreme Value Theorem (Theorem \ref{thm:extreme_val}) states that a continuous function on a closed interval will have absolute extrema, that is, both an absolute maximum and an absolute minimum. These extrema occur either at the endpoints or at critical values in the interval. We combine these concepts to offer a strategy for finding extrema.
 
 \keyidea{idea:extrema}{Finding Extrema on a Closed Interval}%
 {Let $f$ be a continuous function defined on a closed interval $[a,b]$. To find the maximum and minimum values of $f$ on $[a,b]$:\index{extrema!finding}
@@ -150,7 +150,7 @@ The table in Figure \ref{table:ext4} gives $f$ evaluated at the ``important'' $x
 \vskip-\baselineskip
 }\\
 
-Note that all this was done without the aid of a graph; this work followed an analytic algorithm and did not depend on any visualization. Figure \ref{fig:extval4} shows $f$ and we can confirm our answer, but it is important to  understand that these answers can be found without graphical assistance.
+Note that all this was done without the aid of a graph; this work followed an analytic algorithm and did not depend on any visualization. Figure \ref{fig:extval4} shows $f$ and we can confirm our answer, but it is important to  understand that these answers can be found without graphical assistance.  In fact, if we simply looked at the graph to determine the extrema, it would not be clear that the minimum occurs at $x=1$ as opposed to $x=0.999$.  So we must use Key Idea~\ref{idea:extrema} to find these extrema.
 
 
 
