--- a/exercises/03_02_exercises.tex
+++ b/exercises/03_02_exercises.tex
@@ -6,6 +6,8 @@
 \ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/03_02_exset_02}
 \printreview
+\exinput{exercises/03_02_ex_28}
+\exinput{exercises/03_02_ex_29}
 \exinput{exercises/03_02_ex_21}
 \exinput{exercises/03_02_ex_22}
 \exinput{exercises/03_02_ex_23}
