--- a/exercises/03_02_exset_02.tex
+++ b/exercises/03_02_exset_02.tex
@@ -6,7 +6,11 @@
 \exinput{exercises/03_02_ex_14}
 \exinput{exercises/03_02_ex_20}
 \exinput{exercises/03_02_ex_15}
+\exinput{exercises/03_02_ex_27}
 \exinput{exercises/03_02_ex_16}
 \exinput{exercises/03_02_ex_17}
 \exinput{exercises/03_02_ex_18}
 \exinput{exercises/03_02_ex_19}
+\exinput{exercises/03_02_ex_24}
+\exinput{exercises/03_02_ex_25}
+\exinput{exercises/03_02_ex_26}
