Compiled books with earlier edits

--- a/exercises/03_01_ex_28.tex
+++ b/exercises/03_01_ex_28.tex
@@ -1,3 +1,4 @@
-{$\ds f(x) = \frac{3^\sqrt{x}}{x}$\quad  on \quad $[1,16]$.
+{$\ds f(x) = \frac{3^{\sqrt{x}}}{x}$\quad  on \quad $[1,16]$.
 }
-{Yes}
+{Yes
+}
