--- a/exercises/03_01_ex_29.tex
+++ b/exercises/03_01_ex_29.tex
@@ -1,4 +1,4 @@
-{$\ds f(x) = \frac{3^\sqrt{x}}{x}$\quad  on \quad $[1,\infty)$.
+{$\ds f(x) = \frac{3^{\sqrt{x}}}{x}$\quad  on \quad $[1,\infty)$.
 }
 {No.  The interval $[1,\infty)$ is not a closed interval $[a,b]$.
 }
