--- a/exercises/03_01_ex_30.tex
+++ b/exercises/03_01_ex_30.tex
@@ -1,4 +1,4 @@
 {$\ds f(x) = \tan x$\quad  on \quad $[0,2]$.
 }
-{No.  The function $f(x)$ is not defined at $x=\pi/2$ and therefore not continuous on $[0,2]$.
+{No.  The function $f(x)$ is not defined at $x=\pi/2$ and therefore is not continuous on $[0,2]$.
 }
