--- a/exercises/03_01_exset_04.tex
+++ b/exercises/03_01_exset_04.tex
@@ -1,5 +1,5 @@
 {\noindent In Exercises}
-{, determine if the given function and interval meets the conditions required to satisfy the Extreme Value Theorem.  If not, explain why not.}
+{, determine if the given function and interval meet the conditions required to satisfy the Extreme Value Theorem.  If not, explain why not.}
 \exinput{exercises/03_01_ex_26}
 \exinput{exercises/03_01_ex_27}
 \exinput{exercises/03_01_ex_28}
