--- a/text/03_Extreme_Values.tex
+++ b/text/03_Extreme_Values.tex
@@ -170,7 +170,8 @@ So we have three important $x$ values to consider: $x= -4, 2$ and $0$. Evaluatin
 \mtable{.6}{Finding the extreme values of $f$ in Example \ref{ex_extval5}.}{table:ext5}{\begin{tabular}{cc} $x$ & $f(x)$ \\ \hline \rule{0pt}{10pt} $-4$ & 25 \\ 0 & 1 \\ 2 & 3\end{tabular}}
 \mfigure{.4}{A graph of $f(x)$ on $[-4,2]$ as in Example \ref{ex_extval5}.}{fig:extval5}{figures/figextval5}
 }\\
-\clearpage
+%\clearpage
+
 \example{ex_extval6}{Finding extreme values}{
 Find the extrema of  $f(x) = \cos (x^2)$ on $[-2,2]$.}
 {We again use Key Idea \ref{idea:extrema}. Evaluating $f$ at the endpoints of the interval gives: $f(-2) = f(2) = \cos (4) \approx -0.6536.$ We now find the critical values of $f$.
@@ -187,7 +188,7 @@ From the table it is clear that the maximum value of $f$ on $[-2,2]$ is 1; the m
 \mfigure{.67}{A graph of $f(x)=\cos(x^2)$ on $[-2,2]$ as in Example \ref{ex_extval6}.}{fig:extval6}{figures/figextval6}
 }\\
 
-We consider one more example.\\
+%We consider one more example.\\
 
 
 \example{ex_extval7}{Finding extreme values}{
