--- a/exercises/03_01_exercises.tex
+++ b/exercises/03_01_exercises.tex
@@ -8,6 +8,7 @@
 \exsetinput{exercises/03_01_exset_01}
 \exsetinput{exercises/03_01_exset_02}
 \exsetinput{exercises/03_01_exset_03}
+\exsetinput{exercises/03_01_exset_04}
 \printreview
 \exinput{exercises/02_07_ex_29}
 \exinput{exercises/02_07_ex_30}
